[package]
name = "fastteltools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastteltools"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "^0.22.4"
pyo3-ffi = "^0.22.4"
numpy = "^0.22.1"
ndarray = "^0.16.1"
ndarray-linalg = "^0.16.0"
rstar = "0.12.2"
rayon = "1.10.0"

[profile.release]
debug = true      # Debug symbols for our profiler.
lto = true        # Link-time optimization.
codegen-units = 1 # Slower compilation but faster code.
